--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "toriii-technology",
+  "homepage": "https://toriii-market-maker.github.io/toriii-technology",
   "version": "1.0.0",
   "description": "Official website of Toriii Technology",
   "source": "./index.html",
